--- a/Tarea4_EstadisticaParaCienciaDeLosDatos.ipynb
+++ b/Tarea4_EstadisticaParaCienciaDeLosDatos.ipynb
@@ -83,7 +83,7 @@
       "metadata": {
         "id": "0l167liAnOXt"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -97,7 +97,7 @@
       "metadata": {
         "id": "Chc9Yb6Dk39n"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -152,7 +152,7 @@
         "id": "phnCZMTJmOo4",
         "outputId": "53f8962c-a61c-4dca-8efe-e7a262571c17"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -202,7 +202,7 @@
         "id": "tjejqXezdvEb",
         "outputId": "4a94c440-810f-455d-9921-1814ebff273a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -231,7 +231,7 @@
         "id": "p3oGV2rtsxfw",
         "outputId": "de66d769-857e-4f15-e4be-007605730025"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -258,7 +258,7 @@
         "id": "eXlF2XT7GVud",
         "outputId": "f0aa680f-edbf-408d-d2a6-0d946e964ae2"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -291,7 +291,7 @@
         "id": "d-NL4YvFHIlr",
         "outputId": "6c3ffe92-d620-456a-c1f0-f938adec55b3"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -299,32 +299,6 @@
           "text": [
             "3.9675629534784496 3.238871517453585\n",
             "Hipotesis: Rechazada\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from scipy.stats import f_oneway\n",
-        "\n",
-        "anova=f_oneway([1.65,1.72,1.50,1.37,1.60], [1.70,1.85,1.46,1.46,1.80],[1.40,1.75,1.38,1.38,1.55],[2.10,1.95,1.65,1.65,1.88])\n",
-        "print(anova)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "oy8Sb3fLLzaN",
-        "outputId": "a0c9b79f-4820-435b-ac27-9412f30d3f02"
-      },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "F_onewayResult(statistic=3.9675629534784447, pvalue=0.027282236212814028)\n"
           ]
         }
       ]
@@ -387,12 +361,15 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# #Información tomada de \n",
+        "# https://towardsdatascience.com/6-different-ways-to-compensate-for-missing-values-data-imputation-with-examples-6022d9ca0779\n",
+        "# https://www.analyticsvidhya.com/blog/2021/06/defining-analysing-and-implementing-imputation-techniques/\n",
+        "# https://vitalflux.com/pandas-impute-missing-values-mean-median-mode/#:~:text=Impute%20%2F%20Replace%20Missing%20Values%20with%20Median,-Another%20technique%20is&text=When%20the%20data%20is%20skewed,be%20done%20with%20numerical%20data."
       ],
       "metadata": {
         "id": "rZ1AoBxUnARM"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     }
   ]
